force-app/main/default/objects/Bande_Usine__c/Bande_Usine__c.object-meta.xml
<CustomObject>
    <label>Bande Usine</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom du fichier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bande Usine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>