force-app/main/default/objects/Bande_Usine__c/fields/Date_de_fin_de_validite_de_la_garantie__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_validite_de_la_garantie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de fin de validite de la garantie</label>
    <type>Date</type>
</CustomField>