force-app/main/default/objects/Bande_Usine__c/fields/Date_de_l_import__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_import__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de l&apos;import</label>
    <type>Date</type>
</CustomField>