force-app/main/default/objects/Bande_Usine__c/fields/Date_de_Validation_Refus__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Validation_Refus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de Validation / Refus</label>
    <type>Date</type>
</CustomField>