force-app/main/default/objects/Bande_Usine__c/fields/Date_declaration_OCOM__c.field-meta.xml
<CustomField>
    <fullName>Date_declaration_OCOM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date déclaration OCOM</label>
    <type>Date</type>
</CustomField>