force-app/main/default/objects/Bande_Usine__c/fields/Duree_de_la_garantie__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_la_garantie__c</fullName>
    <label>Duree de la garantie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>