force-app/main/default/objects/Bande_Usine__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foyer</fullName>
            </value>
            <value>
                <fullName>Station</fullName>
            </value>
            <value>
                <fullName>SAV MM</fullName>
            </value>
            <value>
                <fullName>Prestataire SAV</fullName>
            </value>
            <value>
                <fullName>Prestataire logistique</fullName>
            </value>
            <value>
                <fullName>Pas de localisation</fullName>
            </value>
            <value>
                <fullName>Fabricant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>