force-app/main/default/objects/Bande_Usine__c/fields/Nom_du_fichier__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_fichier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nom du fichier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>