force-app/main/default/objects/Bande_Usine__c/fields/Referentiel_Panel__c.field-meta.xml
<CustomField>
    <fullName>Referentiel_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel Panel</label>
    <referenceTo>Referentiel_Panel__c</referenceTo>
    <relationshipLabel>Bande Usine</relationshipLabel>
    <relationshipName>Bande_Usine</relationshipName>
    <type>Lookup</type>
</CustomField>