force-app/main/default/objects/Bande_Usine__c/fields/Statut_de_l_import__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_l_import__c</fullName>
    <label>Statut de l&apos;import</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Validée</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Rejetée</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Partiellement Validée</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Partiellement rejetée</label>
            </value>
            <value>
                <fullName>A activer</fullName>
                <isActive>false</isActive>
                <label>A activer</label>
            </value>
            <value>
                <fullName>A contrôler</fullName>
                <isActive>false</isActive>
                <label>A contrôler</label>
            </value>
            <value>
                <fullName>A valider</fullName>
                <isActive>false</isActive>
                <label>A valider</label>
            </value>
            <value>
                <fullName>Accepté</fullName>
                <isActive>false</isActive>
                <label>Accepté</label>
            </value>
            <value>
                <fullName>Rejeté Import</fullName>
                <isActive>false</isActive>
                <label>Rejeté Import</label>
            </value>
            <value>
                <fullName>Rejeté QA</fullName>
                <isActive>false</isActive>
                <label>Rejeté QA</label>
            </value>
            <value>
                <fullName>Rejeté Validation</fullName>
                <isActive>false</isActive>
                <label>Rejeté Validation</label>
            </value>
            <value>
                <fullName>Validé/Rejeté</fullName>
                <isActive>false</isActive>
                <label>Validé/Rejeté</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>