force-app/main/default/objects/Bande_Usine__c/fields/Type_d_audim_tre__c.field-meta.xml
<CustomField>
    <fullName>Type_d_audim_tre__c</fullName>
    <label>Type d&apos;audimètre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valeur à joindre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>