force-app/main/default/objects/Bande_Usine__c/fields/Type_de_materiel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_materiel__c</fullName>
    <label>Type de matériel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>31</fullName>
                <label>Beacon</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Routeur</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Soft Meter</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Pager</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Carte SIM</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Setmeter</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>IRD</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>DMD</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>TVM3</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Autre équipement</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Streaming Meter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>