force-app/main/default/objects/Bande_Usine__c/fields/Type_de_panel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel__c</fullName>
    <label>Type de panel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mediamat</fullName>
            </value>
            <value>
                <fullName>PaMe</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>