force-app/main/default/objects/Bande_Usine__c/listViews/Toutes_les_bandes_Usine.listView-meta.xml
<ListView>
    <fullName>Toutes_les_bandes_Usine</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_de_l_import__c</columns>
    <columns>Statut_de_l_import__c</columns>
    <columns>Date_de_Validation_Refus__c</columns>
    <columns>Date_declaration_OCOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les bandes Usine</label>
</ListView>